--- a/package.json
+++ b/package.json
@@ -87,7 +87,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-i18next": "^16.5.4",
-    "react-router-dom": "6.30.3"
+    "react-router-dom": "^7.13.0"
   },
   "msw": {
     "workerDirectory": [
