--- a/apps/auth-mfe/package.json
+++ b/apps/auth-mfe/package.json
@@ -20,7 +20,7 @@
     "lucide-react": "^0.475.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router": "^7.13.0",
+    "react-router-dom": "^7.13.0",
     "tailwind-merge": "^3.0.0",
     "zustand": "^5.0.0"
   },
