--- a/apps/docs-mfe/package.json
+++ b/apps/docs-mfe/package.json
@@ -17,7 +17,7 @@
     "lucide-react": "^0.475.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router": "^7.13.0",
+    "react-router-dom": "^7.13.0",
     "yup": "^1.7.1"
   },
   "devDependencies": {
