--- a/apps/shell/package.json
+++ b/apps/shell/package.json
@@ -27,6 +27,7 @@
     "zustand": "^5.0.0"
   },
   "devDependencies": {
+    "@module-federation/enhanced": "^2.0.1",
     "@module-federation/vite": "^1.11.0",
     "@tailwindcss/vite": "^4.0.0",
     "@types/node": "^25.3.0",
