--- a/.github/workflows/publish-npm.yml
+++ b/.github/workflows/publish-npm.yml
@@ -10,7 +10,7 @@ on:
 jobs:
   publish-npm:
     runs-on: ubuntu-latest
-    
+
     defaults:
       run:
         working-directory: ./tools/create-synapse
@@ -18,6 +18,10 @@ jobs:
     steps:
       - name: ⬇️ Checkout Repo
         uses: actions/checkout@v4
+
+      - name: 📦 Extract Version
+        id: package-version
+        run: echo "VERSION=$(node -p "require('./package.json').version")" >> $GITHUB_ENV
 
       - name: ⚙️ Setup Node.js
         uses: actions/setup-node@v4
@@ -29,3 +33,12 @@ jobs:
         run: npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+
+      - name: 🏷️ Create GitHub Release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          gh release create "v${{ env.VERSION }}" \
+            --title "v${{ env.VERSION }}" \
+            --notes "Published \`create-synapse-mfe@${{ env.VERSION }}\` to NPM." \
+            --target main
