--- a/tools/project.json
+++ b/tools/project.json
@@ -6,37 +6,9 @@
   "tags": [],
   "targets": {
     "build": {
-      "executor": "@nx/js:swc",
-      "outputs": [
-        "{options.outputPath}"
-      ],
+      "executor": "nx:run-commands",
       "options": {
-        "outputPath": "dist/tools",
-        "main": "tools/src/index.ts",
-        "tsConfig": "tools/tsconfig.lib.json",
-        "assets": [
-          "tools/*.md",
-          {
-            "input": "./tools/src",
-            "glob": "**/!(*.ts)",
-            "output": "./src"
-          },
-          {
-            "input": "./tools/src",
-            "glob": "**/*.d.ts",
-            "output": "./src"
-          },
-          {
-            "input": "./tools",
-            "glob": "generators.json",
-            "output": "."
-          },
-          {
-            "input": "./tools",
-            "glob": "executors.json",
-            "output": "."
-          }
-        ]
+        "command": "tsc -p tools/tsconfig.lib.json"
       }
     },
     "lint": {
