--- a/apps/docs-mfe/package.json
+++ b/apps/docs-mfe/package.json
@@ -14,9 +14,9 @@
   "dependencies": {
     "@synapse/shared-types": "workspace:*",
     "@synapse/ui-kit": "workspace:*",
-    "lucide-react": "^0.475.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.13.0",
     "yup": "^1.7.1"
   },
