--- a/apps/docs-mfe/package.json
+++ b/apps/docs-mfe/package.json
@@ -12,6 +12,7 @@
     "test": "vitest run --passWithNoTests"
   },
   "dependencies": {
+    "@synapse/shared-api": "workspace:*",
     "@synapse/shared-types": "workspace:*",
     "@synapse/ui-kit": "workspace:*",
     "react": "^19.0.0",
