feat: Introduce a new shared-components library and refactor documentation pages to utilize its extracted components.

--- a/apps/docs-mfe/package.json
+++ b/apps/docs-mfe/package.json
@@ -12,6 +12,7 @@
     "test": "vitest run --passWithNoTests"
   },
   "dependencies": {
+    "@synapse/shared-components": "workspace:*",
     "@synapse/shared-api": "workspace:*",
     "@synapse/shared-types": "workspace:*",
     "@synapse/ui-kit": "workspace:*",
