feat: Add new documentation pages for `@libs` workspace and `ComponentBoundary` component, and enhance component usage examples with `ExampleTabs`.

--- a/apps/docs-mfe/package.json
+++ b/apps/docs-mfe/package.json
@@ -12,8 +12,10 @@
     "test": "vitest run --passWithNoTests"
   },
   "dependencies": {
+    "@synapse/mock-api": "workspace:*",
     "@synapse/shared-components": "workspace:*",
     "@synapse/shared-api": "workspace:*",
+    "@synapse/shared-monitoring": "workspace:*",
     "@synapse/shared-types": "workspace:*",
     "@synapse/ui-kit": "workspace:*",
     "react": "^19.0.0",
