--- a/apps/auth-mfe/package.json
+++ b/apps/auth-mfe/package.json
@@ -11,7 +11,10 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@synapse/mock-api": "workspace:*",
     "@synapse/shared-api": "workspace:*",
+    "@synapse/shared-components": "workspace:*",
+    "@synapse/shared-monitoring": "workspace:*",
     "@synapse/shared-types": "workspace:*",
     "@synapse/ui-kit": "workspace:*",
     "class-variance-authority": "^0.7.1",
