--- a/apps/shell/package.json
+++ b/apps/shell/package.json
@@ -11,7 +11,10 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@synapse/mock-api": "workspace:*",
     "@synapse/shared-api": "workspace:*",
+    "@synapse/shared-components": "workspace:*",
+    "@synapse/shared-monitoring": "workspace:*",
     "@synapse/shared-types": "workspace:*",
     "@synapse/ui-kit": "workspace:*",
     "@tanstack/react-query": "^5.68.0",
