--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "prepare": "husky",
     "budget:check": "tsx tools/bundle-budget.ts",
     "add:ui": "./scripts/add-ui.sh",
+    "remove:ui": "./scripts/remove-ui.sh",
     "review:pre-push": "bash ./scripts/review-before-push.sh",
     "review:full": "pnpm lint && pnpm typecheck && pnpm test && pnpm build && pnpm budget:check"
   },
@@ -84,9 +85,11 @@
     "@nx/devkit": "22.5.2",
     "@sentry/react": "^10.39.0",
     "@sentry/vite-plugin": "^4.9.1",
+    "date-fns": "^4.1.0",
     "i18next": "^25.8.13",
     "radix-ui": "^1.4.3",
     "react": "^19.0.0",
+    "react-day-picker": "^9.14.0",
     "react-dom": "^19.0.0",
     "react-i18next": "^16.5.4",
     "react-router-dom": "^7.13.0"
