--- a/package.json
+++ b/package.json
@@ -35,14 +35,14 @@
     "@axe-core/playwright": "^4.11.1",
     "@axe-core/react": "^4.11.1",
     "@eslint/js": "^9.39.3",
-    "@nx/eslint-plugin": "^22.5.2",
-    "@nx/jest": "22.5.2",
-    "@nx/js": "22.5.2",
-    "@nx/plugin": "^22.5.2",
-    "@nx/react": "^22.5.2",
-    "@nx/vite": "^22.5.2",
-    "@nx/vitest": "22.5.2",
-    "@nx/web": "22.5.2",
+    "@nx/eslint-plugin": "^22.5.3",
+    "@nx/jest": "22.5.3",
+    "@nx/js": "22.5.3",
+    "@nx/plugin": "^22.5.3",
+    "@nx/react": "^22.5.3",
+    "@nx/vite": "^22.5.3",
+    "@nx/vitest": "22.5.3",
+    "@nx/web": "22.5.3",
     "@swc-node/register": "~1.11.1",
     "@swc/cli": "~0.8.0",
     "@swc/core": "~1.15.5",
@@ -52,8 +52,8 @@
     "@types/node": "20.19.9",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
-    "@typescript-eslint/eslint-plugin": "^8.56.0",
-    "@typescript-eslint/parser": "^8.56.0",
+    "@typescript-eslint/eslint-plugin": "^8.56.1",
+    "@typescript-eslint/parser": "^8.56.1",
     "@vitejs/plugin-react": "^4.2.0",
     "@vitest/coverage-v8": "^4.0.0",
     "@vitest/ui": "^4.0.0",
@@ -69,20 +69,20 @@
     "jsonc-eslint-parser": "^2.1.0",
     "lint-staged": "^16.2.7",
     "msw": "^2.12.10",
-    "nx": "^22.5.2",
+    "nx": "^22.5.3",
     "prettier": "^3.8.1",
     "rollup-plugin-visualizer": "^7.0.0",
     "tailwindcss": "^4.0.0",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.56.0",
+    "typescript-eslint": "^8.56.1",
     "vite": "^7.0.0",
     "vite-plugin-dts": "~4.5.0",
     "vitest": "^4.0.0",
     "vitest-axe": "^0.1.0"
   },
   "dependencies": {
-    "@nx/devkit": "22.5.2",
+    "@nx/devkit": "22.5.3",
     "@sentry/react": "^10.39.0",
     "@sentry/vite-plugin": "^4.9.1",
     "date-fns": "^4.1.0",
@@ -100,5 +100,18 @@
       "apps/auth-mfe/public",
       "apps/docs-mfe/public"
     ]
+  },
+  "pnpm": {
+    "overrides": {
+      "ajv@8.12.0": "8.18.0",
+      "ajv@8.13.0": "8.18.0",
+      "koa@3.0.3": "3.1.2",
+      "serialize-javascript@6.0.2": "7.0.3",
+      "minimatch@3.1.3": "3.1.4",
+      "minimatch@5.1.7": "5.1.8",
+      "minimatch@9.0.6": "9.0.7",
+      "minimatch@10.2.1": "10.2.4",
+      "minimatch@10.2.2": "10.2.4"
+    }
   }
 }
