--- a/.github/workflows/publish-npm.yml
+++ b/.github/workflows/publish-npm.yml
@@ -7,6 +7,9 @@ on:
     paths:
       - 'tools/create-synapse/**'
 
+permissions:
+  contents: write
+
 jobs:
   publish-npm:
     runs-on: ubuntu-latest
@@ -36,8 +39,13 @@ jobs:
 
       - name: 🏷️ Create GitHub Release
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
+          if gh release view "v$VERSION" >/dev/null 2>&1; then
+            echo "Release v$VERSION already exists. Skipping."
+            exit 0
+          fi
+
           gh release create "v$VERSION" \
             --title "v$VERSION" \
             --notes "Published \`create-synapse-mfe@$VERSION\` to NPM." \
