docs: align module federation docs and generalize domain examples

--- a/apps/shell/.env.example
+++ b/apps/shell/.env.example
@@ -1,6 +1,9 @@
 # === SHELL LOCAL REMOTE OVERRIDES ===
 # Variabel ini akan dipakai lokal oleh Vite untuk menimpa URL statis di public/remotes.json.
-# Pastikan nama ENV berawalan "VITE_" lalu CamelCase nama remote yang di-kebab-case + "_URL".
+# Gunakan format: VITE_<REMOTE_NAME>_URL.
+# Loader mendukung 2 pola:
+# - berdasarkan key registry (contoh: docs-mfe -> VITE_DOCS_MFE_URL)
+# - berdasarkan remote.name (contoh: docsmfe -> VITE_DOCSMFE_URL)
 
 # Misal jika ingin menimpa "authMfe" menjadi URL khusus/port lain:
 VITE_AUTH_MFE_URL=http://localhost:4001
@@ -10,6 +13,8 @@ VITE_BUSINESS_MFE_URL=http://localhost:4002
 
 # Misal jika menimpa "docs-mfe":
 VITE_DOCS_MFE_URL=http://localhost:4003
+# Alias yang juga valid untuk remote name "docsmfe":
+# VITE_DOCSMFE_URL=http://localhost:4003
 
 # URL referensi untuk Shell itu sendiri (digunakan Origin Guard):
 VITE_SHELL_URL=http://localhost:4000
